package domain.criteriosPertenencia;

import domain.Hecho;

public interface ICriterioDePertenencia {

  public Boolean cumpleCriterio(Hecho hecho);
}