package domain.fuentes;
import domain.Hecho;
import java.util.List;

public interface Fuente {
  public List<Hecho> importarHechos();

}
