package domain.fuentes.estrategiasFuenteEstatica;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter@AllArgsConstructor
public class Archivo {
  private String nombre;
  private Integer tamanioEnBytes;
}
